<resources>

    <string-array name="income_source">
        <item>Salary</item>
        <item>Business Revenue</item>
        <item>Others Revenue</item>
        <item>Loan</item>
        <item>Gift</item>
        <item>Get From Relative</item>
        <item>Get From Friend</item>
        <item>Others</item>
    </string-array>

    <string-array name="expense_item">
        <item>Breakfast</item>
        <item>Lunch</item>
        <item>Dinner</item>
        <item>Snacks</item>
        <item>Drinks</item>
        <item>Cigarette</item>
        <item>Clothes</item>
        <item>Journey Cost</item>
        <item>House Rent</item>
        <item>Medicine</item>
        <item>Study Material</item>
        <item>Tuition Fees</item>
        <item>Others</item>
    </string-array>

    <string name="app_name">Pocketer Halchal</string>
    <string name="terms_condition">By clicking Sign Up, You agree to our <font color='#FF0000'>Terms &amp; Conditions</font> and that you have read our <font color='#FFE91E63'>Privacy Policy</font></string>
    <string name="sign_up">Dont have an account? <font color="#FF0000">Sign Up</font></string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="add_income_amount">Add Income Amount:</string>
    <string name="source">Source:</string>
    <string name="dd_mm_yyyy">DD/MM/YYYY</string>
    <string name="description">Description: (Optional)</string>
    <string name="submit">Submit</string>
    <string name="add_expense_amount">Add Expense Amount:</string>
    <string name="expense_item">Expense Item:</string>
    <string name="username">Username:</string>
    <string name="password">Pin:</string>
    <string name="sign_in">Sign In</string>
    <string name="connect_with_facebook">Connect With Facebook</string>
    <string name="welcome">Welcome!</string>
    <string name="email">Email:</string>
    <string name="retype_password">Retype Pin:</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="date">Date</string>
    <string name="item">Item</string>
    <string name="cost">Cost</string>
    <string name="mr_username">Mr. Username</string>
    <string name="about_us">About Us</string>
    <string name="logout">Logout</string>
    <string name="bangla">বাংলা</string>
    <string name="dark">Dark</string>
    <string name="english">English</string>
    <string name="light">Light</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="filter_by">Filter By:</string>
    <string name="update">Enable</string>
    <string name="delete_all">Delete All</string>
    <string name="change_password">Change Pin</string>
    <string name="old_password">Enter Old Pin:</string>
    <string name="enter_new_password">Enter New Pin:</string>
    <string name="re_enter_password">Re-Enter New Pin</string>
    <string name="setup_login_pin">App Lock</string>
    <string name="updateData">Update</string>
    <string name="language">Language</string>
    <string name="app_lock">App Lock</string>
</resources>