<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:orientation="vertical">

    <EditText
        android:id="@+id/etOldPassword"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/old_password"
        android:textColor="?attr/TextColor"
        android:textColorHint="?attr/TextColor"
        android:inputType="numberPassword"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="10dp"
        android:background="@drawable/edittext_design" />
    <EditText
        android:id="@+id/etNewPassword"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/enter_new_password"
        android:textColor="?attr/TextColor"
        android:textColorHint="?attr/TextColor"
        android:inputType="numberPassword"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="10dp"
        android:background="@drawable/edittext_design"
        android:autofillHints="@string/password" />
    <EditText
        android:id="@+id/etConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/re_enter_password"
        android:textColor="?attr/TextColor"
        android:textColorHint="?attr/TextColor"
        android:inputType="numberPassword"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="10dp"
        android:background="@drawable/edittext_design"
        android:autofillHints="@string/password" />

</LinearLayout>