<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="?attr/LayoutBackground"
    android:weightSum="5"
    tools:context=".SetPasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingTop="15dp"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textColor="?attr/TextColor"
            android:textSize="30sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:weightSum="4"
        android:orientation="vertical">
        <EditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/username"
            android:maxLength="15"
            android:textColor="?attr/TextColor"
            android:textColorHint="?attr/TextColor"
            android:inputType="text"
            android:drawableStart="@drawable/ic_user"
            android:drawablePadding="10dp"
            android:background="@drawable/edittext_design"
            android:autofillHints="@string/username" />
        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/password"
            android:maxLength="15"
            android:textColor="?attr/TextColor"
            android:textColorHint="?attr/TextColor"
            android:inputType="numberPassword"
            android:drawableStart="@drawable/ic_password"
            android:drawablePadding="10dp"
            android:background="@drawable/edittext_design"
            android:autofillHints="@string/password" />
        <EditText
            android:id="@+id/etRetypePassword"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/retype_password"
            android:maxLength="15"
            android:drawableStart="@drawable/ic_password"
            android:drawablePadding="10dp"
            android:textColor="?attr/TextColor"
            android:textColorHint="?attr/TextColor"
            android:inputType="numberPassword"
            android:background="@drawable/edittext_design"
            android:autofillHints="@string/retype_password" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <Button
            android:id="@+id/btSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_button"
            android:background="@drawable/button_design"
            android:textColor="@color/white"
            android:gravity="center"/>
    </LinearLayout>

</LinearLayout>