<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="?attr/LayoutBackground"
    android:weightSum="5"
    tools:context=".IncomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:paddingTop="15dp"
        android:weightSum="2"
        android:orientation="vertical">
        <EditText
            android:id="@+id/etExpense"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:layout_marginBottom="20dp"
            android:hint="@string/add_expense_amount"
            android:maxLength="8"
            android:textColor="?attr/TextColor"
            android:textColorHint="?attr/TextColor"
            android:inputType="number"
            android:background="@drawable/edittext_design"
            android:autofillHints="@string/add_expense_amount" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal"
            android:background="@drawable/edittext_design">
            <TextView
                android:id="@+id/tvItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="15dp"
                android:paddingEnd="5dp"
                android:layout_gravity="center"
                android:text="@string/expense_item"
                android:textColor="?attr/TextColor"
                android:textSize="18sp" />
            <Spinner
                android:id="@+id/spExpenseItem"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:backgroundTint="@color/white"
                android:spinnerMode="dropdown" />
        </LinearLayout>
        <TextView
            android:id="@+id/tvDate"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:layout_marginBottom="20dp"
            android:textColor="?attr/TextColor"
            android:text="@string/dd_mm_yyyy"
            android:textColorHint="?attr/TextColor"
            android:inputType="date"
            android:background="@drawable/edittext_design"
            android:gravity="center|left"
            app:drawableEndCompat="@mipmap/calendar_foreground" />
        <EditText
            android:id="@+id/etDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:lines="8"
            android:padding="15dp"
            android:gravity="top"
            android:textColor="?attr/TextColor"
            android:hint="@string/description"
            android:maxLength="150"
            android:textColorHint="?attr/TextColor"
            android:background="@drawable/edittext_design"
            android:autofillHints="@string/description" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">
        <Button
            android:id="@+id/btSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:background="@drawable/button_design"
            android:textColor="@color/white"
            android:textSize="20sp"
            />
    </LinearLayout>

</LinearLayout>